Resolve "Show subject preview on hover"
Squashed commit of the following:

* feat(responsive): don't show preview when screen width under 1100px

* fix(preview): hide image when not hovering parent

* fix(preview): align all previews

* fix(preview): set offset to fixed size

* add releasenote

* doc(exampleSite): add preview to example subjects

* feat(subject-preview): show preview on right side of subject button

* feat(subject-preview): add img preview to list layout

--- a/static/css/menu.css
+++ b/static/css/menu.css
@@ -74,7 +74,30 @@
     margin: 0 0.5em;
 }
 
+/***** preview ******/
 
+.article-item img {
+    border: 5px solid #000;
+    border-radius: 10px;
+
+    position: absolute;
+    left: calc(100% - 3em - var(--item-pos));
+    top: 50%;
+
+    opacity: 0;
+    z-index: 1000;
+    transform: translate(75px, -50%);
+    transition: opacity ease 0.4s;
+}
+
+.article-item:hover img {
+    opacity: 1;
+}
+
+.article-item img:hover {
+    cursor: auto;
+    opacity: 0;
+}
 
 /**** menu subsection ****/
 
@@ -86,4 +109,12 @@
 .page-header-subtitle {
     color: #ccc;
     text-align: center;
+}
+
+/**** responsive ****/
+
+@media screen and (max-width: 1100px) {
+    .article-item:hover img {
+        opacity: 0;
+    }
 }
